k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webrtc-service
spec:
  selector:
    app: webrtc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
